fix: NftSection spacing issue on Nft cards

--- a/client/src/app/components/stardust/Nft.scss
+++ b/client/src/app/components/stardust/Nft.scss
@@ -5,17 +5,13 @@
 .nft-card {
     display: flex;
     width: 200px;
+    height: 235px;
     flex-direction: column;
     font-family: $inter;
     margin: 4px 8px;
 
     &__metadata {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
         height: 208px;
-        margin-bottom: 8px;
     }
     &__image {
         border: 2px solid $white;
@@ -27,9 +23,9 @@
 
     &__name {
         @include font-size(14px);
-        margin-top: 4px;
         font-weight: 400;
         width: 100%;
+        text-align: center;
     }
 
     &__id {
